--- a/htm/index.html
+++ b/htm/index.html
@@ -3,7 +3,7 @@
 
 <body>
 
-<a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://github.com/zgc1092734368/mtcy/mtcyapp.plist'">下载APP</a>
+<a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">下载APP</a>
 </body>
 
 </html>
