--- a/htm/index.html
+++ b/htm/index.html
@@ -1,9 +1,15 @@
 <html>
-<header></header>
+<meta name="keywords" content="mobile web app, mobile template, mobile design, mobile app design, mobile app theme, mobile wordpress theme, my mobile app" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=no" />
+<meta content="yes" name="apple-mobile-web-app-capable" />
+<meta content="black" name="apple-mobile-web-app-status-bar-style" />
+<meta content="telephone=no" name="format-detection" />
+<header><title>茅台创业APP下载</title></header>
 
 <body>
 
-<a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://github.com/zgc1092734368/mtcy/blob/master/mtcyapp.plist'">下载APP</a>
+<center><a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
+</center>
 </body>
 
 </html>
