--- a/htm/index.html
+++ b/htm/index.html
@@ -8,8 +8,11 @@
  <title>茅台创业APP下载</title> 
 </head>
 <body>
-
-<center><a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
+<br>
+<br>
+<br>
+<br>
+<center><a strle="color:red" onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
 </center>
 </body>
 
