--- a/htm/index.html
+++ b/htm/index.html
@@ -12,7 +12,7 @@
 <br>
 <br>
 <br>
-<center><a strle="color:red" onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
+<center><a style="color:red" onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
 </center>
 </body>
 
