--- a/htm/index.html
+++ b/htm/index.html
@@ -12,9 +12,9 @@
 <br>
 <br>
 <br>
-<center><a style="color:red" onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
+<center><a onclick="window.location.href='itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/zgc1092734368/mtcy/master/mtcyapp.plist'">茅台创业APP下载</a>
 <br>
-<span>越狱版</span>
+<span  style="color:red">越狱版</span>
 </center>
 </body>
 
